k8s/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dummy
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dummy
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: dummy-backend
      containers:
      - name: backend
        image: yitsushi/grpc-experiment-backend
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
