k8s/ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: dummy
  labels:
    app: ui
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: dummy
  labels:
    app: ui
spec:
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: yitsushi/grpc-experiment-ui
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
