k8s/envoy.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-envoy
  namespace: dummy
  labels:
    app: backend-envoy
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: backend-envoy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-envoy
  namespace: dummy
  labels:
    app: backend-envoy
spec:
  selector:
    matchLabels:
      app: backend-envoy
  template:
    metadata:
      labels:
        app: backend-envoy
    spec:
      containers:
      - name: backend-envoy
        image: yitsushi/grpc-experiment-envoy
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        - name: envoy-admin
          containerPort: 9901
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend-envoy
  namespace: dummy
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`backend.aurora.efertone.me`) && PathPrefix(`/`)
    services:
    - name: backend-envoy
      port: 80
  tls:
    certResolver: letsencrypt
    domains:
    - main: backend.aurora.efertone.me
